[package]
name = "grabinput"
version = "0.1.0"
authors = ["J/A <archer884@gmail.com>"]
exclude = ["examples/*"]
description = "Unixy lib for reading from a file or from stdin"
repository = "https://github.com/archer884/grabinput.git"
readme = "README.md"
license = "MIT"
keywords = ["stdin", "file", "read", "input", "simple"]
